--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
 
 
     <section>
-        <article class="readme"><p>Descendant of Wolfram Panda</p>
+        <article class="readme"><p><img src="https://github.com/nhannht/wisdoom/actions/workflows/github_pages/badge.svg" alt="">
+<img src="https://github.com/nhannht/wisdoom/actions/workflows/release/badge.svg" alt="">
+Descendant of Wolfram Panda</p>
 <video controls>
 <source src="https://user-images.githubusercontent.com/69144096/211085462-81b60003-da61-4f71-a1d4-821f93afb858.mp4" 
 type=video/mp4>
