deploy: f892a9cba863f9a13203ace1ebaad02cf9c115b4

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
 
     <section>
-        <article class="readme"><p><img src="https://github.com/nhannht/wisdoom/actions/workflows/github_pages/badge.svg" alt="">
-<img src="https://github.com/nhannht/wisdoom/actions/workflows/release/badge.svg" alt="">
+        <article class="readme"><p><a href="https://github.com/nhannht/wisdoom/actions/workflows/github_pages.yml"><img src="https://github.com/nhannht/wisdoom/actions/workflows/github_pages.yml/badge.svg" alt="Github Pages"></a>
+<a href="https://github.com/nhannht/wisdoom/actions/workflows/release.yml"><img src="https://github.com/nhannht/wisdoom/actions/workflows/release.yml/badge.svg" alt="Create release"></a>
 Descendant of Wolfram Panda</p>
 <video controls>
 <source src="https://user-images.githubusercontent.com/69144096/211085462-81b60003-da61-4f71-a1d4-821f93afb858.mp4" 
