--- a/Components_KnowledgeDashBoard.js.html
+++ b/Components_KnowledgeDashBoard.js.html
@@ -36,7 +36,7 @@
         <ul></ul>
     </div>
     
-    <div class="lnb-api hidden"><h3>Classes</h3><ul><li><a href="DraggableButton.html">DraggableButton</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="DraggableButton_sub"></div></li><li><a href="GoogleTabs.html">GoogleTabs</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="GoogleTabs_sub"><div class="member-type">Members</div><ul class="inner"><li><a href="GoogleTabs.html#~json">json</a></li><li><a href="GoogleTabs.html#~listPods">listPods</a></li></ul><div class="member-type">Methods</div><ul class="inner"><li><a href="GoogleTabs.html#~findPodWithTitle">findPodWithTitle</a></li><li><a href="GoogleTabs.html#~truncate">truncate</a></li></ul></div></li><li><a href="ImageActions.html">ImageActions</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="ImageActions_sub"><div class="member-type">Members</div><ul class="inner"><li><a href="ImageActions.html#~subpodId">subpodId</a></li><li><a href="ImageActions.html#~subpodTooltipId">subpodTooltipId</a></li></ul></div></li><li><a href="ImageComponent.html">ImageComponent</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="ImageComponent_sub"></div></li><li><a href="KnowledgeDashBoard.html">KnowledgeDashBoard</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="KnowledgeDashBoard_sub"><div class="member-type">Members</div><ul class="inner"><li><a href="KnowledgeDashBoard.html#~sidebarHeightWithoutHeader">sidebarHeightWithoutHeader</a></li><li><a href="KnowledgeDashBoard.html#~windowHeight">windowHeight</a></li></ul><div class="member-type">Methods</div><ul class="inner"><li><a href="KnowledgeDashBoard.html#~onDragStart">onDragStart</a></li><li><a href="KnowledgeDashBoard.html#~onDragStop">onDragStop</a></li><li><a href="KnowledgeDashBoard.html#~renderAssumptions">renderAssumptions</a></li><li><a href="KnowledgeDashBoard.html#~renderPods">renderPods</a></li><li><a href="KnowledgeDashBoard.html#~sendQueryToBackGround">sendQueryToBackGround</a></li><li><a href="KnowledgeDashBoard.html#~setWolframKey">setWolframKey</a></li><li><a href="KnowledgeDashBoard.html#~toggleSideBar">toggleSideBar</a></li></ul></div></li></ul></div><div class="lnb-api hidden"><h3>Global</h3><ul><li><a href="global.html#addWolframKeyChangeListener">addWolframKeyChangeListener</a></li><li><a href="global.html#api">api</a></li><li><a href="global.html#createContextMenu">createContextMenu</a></li><li><a href="global.html#downloadUrl">downloadUrl</a></li><li><a href="global.html#freeInputListener">freeInputListener</a></li><li><a href="global.html#getResultListener">getResultListener</a></li><li><a href="global.html#getWolframFullResult">getWolframFullResult</a></li><li><a href="global.html#googleResultListener">googleResultListener</a></li><li><a href="global.html#KnowledgeDashBoardPlaceHolder">KnowledgeDashBoardPlaceHolder</a></li><li><a href="global.html#oldFreeStyleQuery">oldFreeStyleQuery</a></li><li><a href="global.html#oldSearch">oldSearch</a></li><li><a href="global.html#saveApiListener">saveApiListener</a></li><li><a href="global.html#setDefaultWolframKey">setDefaultWolframKey</a></li></ul></div>
+    <div class="lnb-api hidden"><h3>Classes</h3><ul><li><a href="DraggableButton.html">DraggableButton</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="DraggableButton_sub"></div></li><li><a href="GoogleTabs.html">GoogleTabs</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="GoogleTabs_sub"><div class="member-type">Members</div><ul class="inner"><li><a href="GoogleTabs.html#~json">json</a></li><li><a href="GoogleTabs.html#~listPods">listPods</a></li></ul><div class="member-type">Methods</div><ul class="inner"><li><a href="GoogleTabs.html#~findPodWithTitle">findPodWithTitle</a></li><li><a href="GoogleTabs.html#~truncate">truncate</a></li></ul></div></li><li><a href="ImageActions.html">ImageActions</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="ImageActions_sub"><div class="member-type">Members</div><ul class="inner"><li><a href="ImageActions.html#~subpodId">subpodId</a></li><li><a href="ImageActions.html#~subpodTooltipId">subpodTooltipId</a></li></ul></div></li><li><a href="ImageComponent.html">ImageComponent</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="ImageComponent_sub"></div></li><li><a href="KnowledgeDashBoard.html">KnowledgeDashBoard</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="KnowledgeDashBoard_sub"><div class="member-type">Members</div><ul class="inner"><li><a href="KnowledgeDashBoard.html#~sidebarHeightWithoutHeader">sidebarHeightWithoutHeader</a></li><li><a href="KnowledgeDashBoard.html#~windowHeight">windowHeight</a></li></ul><div class="member-type">Methods</div><ul class="inner"><li><a href="KnowledgeDashBoard.html#~onDragStart">onDragStart</a></li><li><a href="KnowledgeDashBoard.html#~onDragStop">onDragStop</a></li><li><a href="KnowledgeDashBoard.html#~renderAssumptions">renderAssumptions</a></li><li><a href="KnowledgeDashBoard.html#~renderPods">renderPods</a></li><li><a href="KnowledgeDashBoard.html#~sendQueryToBackGround">sendQueryToBackGround</a></li><li><a href="KnowledgeDashBoard.html#~toggleSideBar">toggleSideBar</a></li></ul></div></li></ul></div><div class="lnb-api hidden"><h3>Global</h3><ul><li><a href="global.html#api">api</a></li><li><a href="global.html#createContextMenu">createContextMenu</a></li><li><a href="global.html#downloadUrl">downloadUrl</a></li><li><a href="global.html#freeInputListener">freeInputListener</a></li><li><a href="global.html#getResultListener">getResultListener</a></li><li><a href="global.html#getWolframFullResult">getWolframFullResult</a></li><li><a href="global.html#googleResultListener">googleResultListener</a></li><li><a href="global.html#KnowledgeDashBoardPlaceHolder">KnowledgeDashBoardPlaceHolder</a></li><li><a href="global.html#oldFreeStyleQuery">oldFreeStyleQuery</a></li><li><a href="global.html#oldSearch">oldSearch</a></li><li><a href="global.html#setDefault">setDefault</a></li></ul></div>
 </nav>
 <div id="resizer"></div>
 
@@ -51,13 +51,12 @@
             <pre class="prettyprint source linenums"><code>/* global chrome */
 // BOOKMARK import here
 import Button from '@jetbrains/ring-ui/dist/button/button';
-import {Sidebar, useProSidebar} from "react-pro-sidebar";
+import {Menu, MenuItem, Sidebar, SubMenu, useProSidebar} from "react-pro-sidebar";
 import Island from "@jetbrains/ring-ui/dist/island/island";
 import Header from "@jetbrains/ring-ui/dist/header/header";
-import Content from "@jetbrains/ring-ui/dist/island/content";
 import {H3, H4} from "@jetbrains/ring-ui/dist/heading/heading";
 import {Input, Size} from "@jetbrains/ring-ui/dist/input/input";
-import {useState} from "react";
+import {useEffect, useState} from "react";
 import Img from 'react-image';
 import Loader from '@jetbrains/ring-ui/dist/loader/loader';
 import Tray from "@jetbrains/ring-ui/dist/header/tray";
@@ -69,31 +68,24 @@ import likeIcon from '@jetbrains/icons/vote-empty';
 import Text from '@jetbrains/ring-ui/dist/text/text';
 import '@jetbrains/icons/file-js'
 import alertService from '@jetbrains/ring-ui/dist/alert-service/alert-service';
-import checkmarkIcon from '@jetbrains/icons/checkmark';
 import Panel from "@jetbrains/ring-ui/dist/panel/panel";
 import ImageActions from "./ImageActions";
 import DraggableButton from "./KnowledgeDashBoard/DraggableButton";
 import 'rc-dropdown/assets/index.css';
-import {Menu, MenuItem, SubMenu} from 'react-pro-sidebar';
 import Link from "@jetbrains/ring-ui/dist/link/link";
-import {Grid, Row, Col} from '@jetbrains/ring-ui/dist/grid/grid';
+import {Col, Grid, Row} from '@jetbrains/ring-ui/dist/grid/grid';
 import SearchIcon from '@jetbrains/icons/search';
 import WolframIcon from '@jetbrains/icons/asterisk';
 import ButtonGroup from '@jetbrains/ring-ui/dist/button-group/button-group';
 import ReactTooltip from "react-tooltip";
 import LoaderInline from "@jetbrains/ring-ui/dist/loader-inline/loader-inline";
-// BOOKMARK end of imports
-// DraggableButton.propTypes = {
-//     onStart: PropTypes.func,
-//     onStop: PropTypes.func,
-//     state: PropTypes.shape({
-//         dashBoardHidden: PropTypes.bool,
-//         loadingResult: PropTypes.bool,
-//         settingHidden: PropTypes.bool,
-//         currentView: PropTypes.string,
-//         queryResult: PropTypes.arrayOf(PropTypes.any),
-//         buttonPosition: PropTypes.shape({x: PropTypes.number, y: PropTypes.number})
-//     })
+import * as PropTypes from "prop-types";
+import {SettingsView} from "./SettingsView";
+
+SettingsView.propTypes = {
+    onKeyDown: PropTypes.func,
+    onClick: PropTypes.func
+};
 // };
 /**
  * @desc This is Knowledge Dashboard
@@ -117,11 +109,29 @@ export default function KnowledgeDashBoard() {
         loadingDraggableButton: false,
         loadingResult: false,
     });
+    const [isUsingDemoApi, setIsUsingDemoApi] = useState(undefined);
+    chrome.storage.sync.get("wolframApi", (result) => {
+        if (result.wolframApi === 'DEMO') {
+            setIsUsingDemoApi(true);
+        } else {
+            setIsUsingDemoApi(false);
+        }
+    })
+
 
     /**
      * @desc state of React-Pro-Sidebar
      */
     const {collapseSidebar, toggleSidebar, collapsed} = useProSidebar();
+    // Fetch wolfram api in background and set to this component stage
+    // Set wolfram api in background when this component state change
+
+
+
+
+
+
+
 
     /**
      * @function
@@ -148,8 +158,8 @@ export default function KnowledgeDashBoard() {
      * @param podstate
      */
     function sendQueryToBackGround(query,
-                                   assumption ,
-                                   reinterpret ,
+                                   assumption,
+                                   reinterpret,
                                    podstate = ""
     ) {
         // console.log("currentAssumption is",state.currentAssumption)
@@ -199,12 +209,7 @@ export default function KnowledgeDashBoard() {
      * @function
      * @param key
      */
-    function setWolframKey(key) {
-        chrome.storage.sync.set({apiKey: key}, function () {
-            // console.log('Wolfram is set to ' + key);
-        })
-        alertService.successMessage('Wolfram is set to ' + key);
-    }
+
 
     // DONE render podstate
     /**
@@ -290,7 +295,14 @@ export default function KnowledgeDashBoard() {
                 }
                 return (
 
-                    &lt;Grid>&lt;Row>
+                    &lt;Grid>
+                        &lt;Row>
+                            {isUsingDemoApi &amp;&amp; &lt;Text color={"red"} >
+                                Using demo api, some result may not be available
+                            &lt;/Text>
+                            }
+                        &lt;/Row>
+                        &lt;Row>
                         &lt;Col>
                             &lt;Row>&lt;H4 key={index}>
                                 {subpodTitle}
@@ -552,25 +564,8 @@ export default function KnowledgeDashBoard() {
 
                     {/*Setting view*/}
                     {state.currentView === "Settings" &amp;&amp;
-                        &lt;Content>
-                            &lt;Input placeholder={"Add  Wolfram api here api here"}
-                                   id={"WolframApiSetting"}
-                                   onKeyDown={(e) => {
-                                       if (e.key === 'Enter') {
-                                           setWolframKey(e.target.value);
-                                       }
-                                   }}
-                            >
-
-                            &lt;/Input>
-                            &lt;Button icon={checkmarkIcon} onClick={() => {
-                                setWolframKey(document.getElementById("WolframApiSetting").value);
-                            }}>&lt;/Button>
-                            &lt;Text>{
-
-                            }&lt;/Text>
-
-                        &lt;/Content>
+                        &lt;SettingsView
+                        />
                     }
 
                     {state.currentView === "WolframAlpha" &amp;&amp;
@@ -594,7 +589,7 @@ export default function KnowledgeDashBoard() {
                                             placeholder={"Press Enter to start searching knowledge"} size={Size.L}
                                             onKeyDown={(e) => {
                                                 if (e.key === 'Enter') {
-                                                    sendQueryToBackGround(e.target.value,"",true,"")
+                                                    sendQueryToBackGround(e.target.value, "", true, "")
                                                 }
                                             }}
                                         />&lt;/Col>
@@ -608,7 +603,7 @@ export default function KnowledgeDashBoard() {
                                                         data-tip={"Search"}
                                                         icon={SearchIcon} onClick={() => {
                                                         sendQueryToBackGround(document.getElementById("wolframQueryInput").value,
-                                                        "",true,"")
+                                                            "", true, "")
 
                                                     }}> &lt;/Button>
                                                     &lt;ReactTooltip
