--- a/background.js.html
+++ b/background.js.html
@@ -36,7 +36,7 @@
         <ul></ul>
     </div>
     
-    <div class="lnb-api hidden"><h3>Classes</h3><ul><li><a href="DraggableButton.html">DraggableButton</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="DraggableButton_sub"></div></li><li><a href="GoogleTabs.html">GoogleTabs</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="GoogleTabs_sub"><div class="member-type">Members</div><ul class="inner"><li><a href="GoogleTabs.html#~json">json</a></li><li><a href="GoogleTabs.html#~listPods">listPods</a></li></ul><div class="member-type">Methods</div><ul class="inner"><li><a href="GoogleTabs.html#~findPodWithTitle">findPodWithTitle</a></li><li><a href="GoogleTabs.html#~truncate">truncate</a></li></ul></div></li><li><a href="ImageActions.html">ImageActions</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="ImageActions_sub"><div class="member-type">Members</div><ul class="inner"><li><a href="ImageActions.html#~subpodId">subpodId</a></li><li><a href="ImageActions.html#~subpodTooltipId">subpodTooltipId</a></li></ul></div></li><li><a href="ImageComponent.html">ImageComponent</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="ImageComponent_sub"></div></li><li><a href="KnowledgeDashBoard.html">KnowledgeDashBoard</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="KnowledgeDashBoard_sub"><div class="member-type">Members</div><ul class="inner"><li><a href="KnowledgeDashBoard.html#~sidebarHeightWithoutHeader">sidebarHeightWithoutHeader</a></li><li><a href="KnowledgeDashBoard.html#~windowHeight">windowHeight</a></li></ul><div class="member-type">Methods</div><ul class="inner"><li><a href="KnowledgeDashBoard.html#~onDragStart">onDragStart</a></li><li><a href="KnowledgeDashBoard.html#~onDragStop">onDragStop</a></li><li><a href="KnowledgeDashBoard.html#~renderAssumptions">renderAssumptions</a></li><li><a href="KnowledgeDashBoard.html#~renderPods">renderPods</a></li><li><a href="KnowledgeDashBoard.html#~sendQueryToBackGround">sendQueryToBackGround</a></li><li><a href="KnowledgeDashBoard.html#~setWolframKey">setWolframKey</a></li><li><a href="KnowledgeDashBoard.html#~toggleSideBar">toggleSideBar</a></li></ul></div></li></ul></div><div class="lnb-api hidden"><h3>Global</h3><ul><li><a href="global.html#addWolframKeyChangeListener">addWolframKeyChangeListener</a></li><li><a href="global.html#api">api</a></li><li><a href="global.html#createContextMenu">createContextMenu</a></li><li><a href="global.html#downloadUrl">downloadUrl</a></li><li><a href="global.html#freeInputListener">freeInputListener</a></li><li><a href="global.html#getResultListener">getResultListener</a></li><li><a href="global.html#getWolframFullResult">getWolframFullResult</a></li><li><a href="global.html#googleResultListener">googleResultListener</a></li><li><a href="global.html#KnowledgeDashBoardPlaceHolder">KnowledgeDashBoardPlaceHolder</a></li><li><a href="global.html#oldFreeStyleQuery">oldFreeStyleQuery</a></li><li><a href="global.html#oldSearch">oldSearch</a></li><li><a href="global.html#saveApiListener">saveApiListener</a></li><li><a href="global.html#setDefaultWolframKey">setDefaultWolframKey</a></li></ul></div>
+    <div class="lnb-api hidden"><h3>Classes</h3><ul><li><a href="DraggableButton.html">DraggableButton</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="DraggableButton_sub"></div></li><li><a href="GoogleTabs.html">GoogleTabs</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="GoogleTabs_sub"><div class="member-type">Members</div><ul class="inner"><li><a href="GoogleTabs.html#~json">json</a></li><li><a href="GoogleTabs.html#~listPods">listPods</a></li></ul><div class="member-type">Methods</div><ul class="inner"><li><a href="GoogleTabs.html#~findPodWithTitle">findPodWithTitle</a></li><li><a href="GoogleTabs.html#~truncate">truncate</a></li></ul></div></li><li><a href="ImageActions.html">ImageActions</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="ImageActions_sub"><div class="member-type">Members</div><ul class="inner"><li><a href="ImageActions.html#~subpodId">subpodId</a></li><li><a href="ImageActions.html#~subpodTooltipId">subpodTooltipId</a></li></ul></div></li><li><a href="ImageComponent.html">ImageComponent</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="ImageComponent_sub"></div></li><li><a href="KnowledgeDashBoard.html">KnowledgeDashBoard</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="KnowledgeDashBoard_sub"><div class="member-type">Members</div><ul class="inner"><li><a href="KnowledgeDashBoard.html#~sidebarHeightWithoutHeader">sidebarHeightWithoutHeader</a></li><li><a href="KnowledgeDashBoard.html#~windowHeight">windowHeight</a></li></ul><div class="member-type">Methods</div><ul class="inner"><li><a href="KnowledgeDashBoard.html#~onDragStart">onDragStart</a></li><li><a href="KnowledgeDashBoard.html#~onDragStop">onDragStop</a></li><li><a href="KnowledgeDashBoard.html#~renderAssumptions">renderAssumptions</a></li><li><a href="KnowledgeDashBoard.html#~renderPods">renderPods</a></li><li><a href="KnowledgeDashBoard.html#~sendQueryToBackGround">sendQueryToBackGround</a></li><li><a href="KnowledgeDashBoard.html#~toggleSideBar">toggleSideBar</a></li></ul></div></li></ul></div><div class="lnb-api hidden"><h3>Global</h3><ul><li><a href="global.html#api">api</a></li><li><a href="global.html#createContextMenu">createContextMenu</a></li><li><a href="global.html#downloadUrl">downloadUrl</a></li><li><a href="global.html#freeInputListener">freeInputListener</a></li><li><a href="global.html#getResultListener">getResultListener</a></li><li><a href="global.html#getWolframFullResult">getWolframFullResult</a></li><li><a href="global.html#googleResultListener">googleResultListener</a></li><li><a href="global.html#KnowledgeDashBoardPlaceHolder">KnowledgeDashBoardPlaceHolder</a></li><li><a href="global.html#oldFreeStyleQuery">oldFreeStyleQuery</a></li><li><a href="global.html#oldSearch">oldSearch</a></li><li><a href="global.html#setDefault">setDefault</a></li></ul></div>
 </nav>
 <div id="resizer"></div>
 
@@ -49,85 +49,71 @@
     <section>
         <article>
             <pre class="prettyprint source linenums"><code>/*global chrome*/
-// Put all the javascript code here, that you want to execute in background.
-// function apiSetup() {
-//     chrome.storage.sync.get('apiKey', async (result) => {
-//         console.log('init background script')
-//         if (typeof result.apiKey !== "undefined" || result.apiKey === "") {
-//             api = result.apiKey
-//         } else {
-//             chrome.storage.sync.set({'apiKey': 'K8AKR2-62T7EH48V5'})
-//             api = (await chrome.storage.sync.get('apiKey')).apiKey
-//
-//         }
-//     })
-// }
-// apiSetup();
-// For development only
+import dotenv from 'dotenv';
+dotenv.config()
 /**
- * Global api
- * @type {number}
+ * @type {number|string}
  */
+let api = undefined;
+let location = undefined;
+let ip = undefined
+let latlong = undefined
 
-/**
- *
- * @type {number}
- */
-let api = 0
-// chrome.storage.sync.get("apiKey", (result) => {
-//     console.log("current apiKey in the storage is " + result.apiKey)
-// })
 
-/**
- *
- */
-function addWolframKeyChangeListener () {
-
+function settingsChangeListener () {
     chrome.storage.onChanged.addListener((changes, namespace) => {
         console.log(changes)
-        if (changes.apiKey) {
-            // api = changes.apiKey.newValue
+        if (changes.wolframApi) {
+            api = changes.wolframApi.newValue
+
         }
-        console.log("we just change apiKey in sync storage,this is ", changes.apiKey.newValue)
+        if (changes.location){
+            location = changes.location.newValue
+
+        }
+        if (changes.ip){
+            ip = changes.ip.newValue
+        }
+        if (changes.latlong){
+            latlong = changes.latlong.newValue
+        }
     })
-    console.log("We just add listener for storage change")
-    // setTimeout(()=> console.log("wait 5s"),5000);
 }
-addWolframKeyChangeListener()
+settingsChangeListener()
 
 
 /**
  *
  */
-function setDefaultWolframKey () {
-    chrome.storage.sync.set({apiKey: 'K8AKR2-62T7EH48V5'}, () => {
-        chrome.storage.sync.get("apiKey", (result) => {
-            api = result.apiKey
-        })
+
+function setDefault() {
+    chrome.storage.sync.get('wolframApi', (result) => {
+        if (!result.wolframApi) {
+            chrome.storage.sync.set({wolframApi: 'DEMO'})
+            api = 'DEMO'
+        } else {
+            api = result.wolframApi
+        }
 
     })
+
+    chrome.storage.sync.get("location", (result) => {
+        location = result.location
+    })
+    chrome.storage.sync.get("ip", (result) => {
+        ip = result.ip
+    })
+    chrome.storage.sync.get("latlong", (result) => {
+        latlong = result.latlong
+    })
 }
-setDefaultWolframKey()
+setDefault()
+
 
 
 /**
  *
  */
-function saveApiListener() {
-    chrome.runtime.onMessage.addListener(async (msg) => {
-        if (msg.apiKey) {
-            chrome.notifications.create({
-                type: 'basic',
-                iconUrl: 'icons/icons8-wolfram-alpha-50.png',
-                title: 'Wolfram Alpha setting notification',
-                message: `Your API key is set successfully, it is ${msg.apiKey}`,
-
-            })
-
-
-        }
-    })
-}
 
 // saveApiListener();
 /**
@@ -161,12 +147,15 @@ const getWolframFullResult = async (query,
     url.searchParams.set('output', 'json')
     url.searchParams.set('reinterpret', 'true')
     url.searchParams.set('assumption', assumption)
+    url.searchParams.set('location', location)
+    url.searchParams.set('ip', ip)
+    url.searchParams.set('latlong', latlong)
     if (reinterpret === false){
         url.searchParams.set('reinterpret','false')
     }
     url.searchParams.set('podstate', podstate)
     url.search = decodeURI(url.search)
-    // /*console.log*/("url for full result is ", url)
+    console.log("url for full result is ", url)
     return fetch(url, requestOptions)
 }
 
@@ -202,6 +191,7 @@ function freeInputListener() {
             msg.podstate
         ).then((response) => {
             response.json().then((result) => {
+                console.log("The result is ", result)
                 sendResponse(result)
             })
         })
