deploy: 64f814793446bf5a19a65ebe96abf4fdfc329627

--- a/background.js.html
+++ b/background.js.html
@@ -36,7 +36,7 @@
         <ul></ul>
     </div>
     
-    <div class="lnb-api hidden"><h3>Classes</h3><ul><li><a href="DraggableButton.html">DraggableButton</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="DraggableButton_sub"></div></li><li><a href="GoogleTabs.html">GoogleTabs</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="GoogleTabs_sub"><div class="member-type">Members</div><ul class="inner"><li><a href="GoogleTabs.html#~json">json</a></li><li><a href="GoogleTabs.html#~listPods">listPods</a></li></ul><div class="member-type">Methods</div><ul class="inner"><li><a href="GoogleTabs.html#~findPodWithTitle">findPodWithTitle</a></li><li><a href="GoogleTabs.html#~truncate">truncate</a></li></ul></div></li><li><a href="ImageActions.html">ImageActions</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="ImageActions_sub"><div class="member-type">Members</div><ul class="inner"><li><a href="ImageActions.html#~subpodId">subpodId</a></li><li><a href="ImageActions.html#~subpodTooltipId">subpodTooltipId</a></li></ul></div></li><li><a href="ImageComponent.html">ImageComponent</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="ImageComponent_sub"></div></li><li><a href="KnowledgeDashBoard.html">KnowledgeDashBoard</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="KnowledgeDashBoard_sub"><div class="member-type">Members</div><ul class="inner"><li><a href="KnowledgeDashBoard.html#~sidebarHeightWithoutHeader">sidebarHeightWithoutHeader</a></li><li><a href="KnowledgeDashBoard.html#~windowHeight">windowHeight</a></li></ul><div class="member-type">Methods</div><ul class="inner"><li><a href="KnowledgeDashBoard.html#~onDragStart">onDragStart</a></li><li><a href="KnowledgeDashBoard.html#~onDragStop">onDragStop</a></li><li><a href="KnowledgeDashBoard.html#~renderAssumptions">renderAssumptions</a></li><li><a href="KnowledgeDashBoard.html#~renderPods">renderPods</a></li><li><a href="KnowledgeDashBoard.html#~sendQueryToBackGround">sendQueryToBackGround</a></li><li><a href="KnowledgeDashBoard.html#~toggleSideBar">toggleSideBar</a></li></ul></div></li></ul></div><div class="lnb-api hidden"><h3>Global</h3><ul><li><a href="global.html#api">api</a></li><li><a href="global.html#createContextMenu">createContextMenu</a></li><li><a href="global.html#downloadUrl">downloadUrl</a></li><li><a href="global.html#freeInputListener">freeInputListener</a></li><li><a href="global.html#getResultListener">getResultListener</a></li><li><a href="global.html#getWolframFullResult">getWolframFullResult</a></li><li><a href="global.html#googleResultListener">googleResultListener</a></li><li><a href="global.html#KnowledgeDashBoardPlaceHolder">KnowledgeDashBoardPlaceHolder</a></li><li><a href="global.html#oldFreeStyleQuery">oldFreeStyleQuery</a></li><li><a href="global.html#oldSearch">oldSearch</a></li><li><a href="global.html#setDefault">setDefault</a></li></ul></div>
+    <div class="lnb-api hidden"><h3>Classes</h3><ul><li><a href="DraggableButton.html">DraggableButton</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="DraggableButton_sub"></div></li><li><a href="GoogleTabs.html">GoogleTabs</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="GoogleTabs_sub"><div class="member-type">Members</div><ul class="inner"><li><a href="GoogleTabs.html#~json">json</a></li><li><a href="GoogleTabs.html#~listPods">listPods</a></li></ul><div class="member-type">Methods</div><ul class="inner"><li><a href="GoogleTabs.html#~findPodWithTitle">findPodWithTitle</a></li><li><a href="GoogleTabs.html#~truncate">truncate</a></li></ul></div></li><li><a href="ImageActions.html">ImageActions</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="ImageActions_sub"><div class="member-type">Members</div><ul class="inner"><li><a href="ImageActions.html#~subpodId">subpodId</a></li><li><a href="ImageActions.html#~subpodTooltipId">subpodTooltipId</a></li></ul></div></li><li><a href="ImageComponent.html">ImageComponent</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="ImageComponent_sub"></div></li><li><a href="KnowledgeDashBoard.html">KnowledgeDashBoard</a><button type="button" class="hidden toggle-subnav btn btn-link">  <span class="glyphicon glyphicon-plus"></span></button><div class="hidden" id="KnowledgeDashBoard_sub"><div class="member-type">Members</div><ul class="inner"><li><a href="KnowledgeDashBoard.html#~sidebarHeightWithoutHeader">sidebarHeightWithoutHeader</a></li><li><a href="KnowledgeDashBoard.html#~windowHeight">windowHeight</a></li></ul><div class="member-type">Methods</div><ul class="inner"><li><a href="KnowledgeDashBoard.html#~onDragStart">onDragStart</a></li><li><a href="KnowledgeDashBoard.html#~onDragStop">onDragStop</a></li><li><a href="KnowledgeDashBoard.html#~renderAssumptions">renderAssumptions</a></li><li><a href="KnowledgeDashBoard.html#~renderPods">renderPods</a></li><li><a href="KnowledgeDashBoard.html#~sendQueryToBackGround">sendQueryToBackGround</a></li><li><a href="KnowledgeDashBoard.html#~toggleSideBar">toggleSideBar</a></li></ul></div></li></ul></div><div class="lnb-api hidden"><h3>Global</h3><ul><li><a href="global.html#api">api</a></li><li><a href="global.html#downloadUrl">downloadUrl</a></li><li><a href="global.html#freeInputListener">freeInputListener</a></li><li><a href="global.html#getWolframFullResult">getWolframFullResult</a></li><li><a href="global.html#KnowledgeDashBoardPlaceHolder">KnowledgeDashBoardPlaceHolder</a></li><li><a href="global.html#oldFreeStyleQuery">oldFreeStyleQuery</a></li><li><a href="global.html#oldSearch">oldSearch</a></li><li><a href="global.html#setDefault">setDefault</a></li></ul></div>
 </nav>
 <div id="resizer"></div>
 
@@ -161,16 +161,16 @@ const getWolframFullResult = async (query,
 /**
  *
  */
-function createContextMenu() {
-    chrome.contextMenus.create({
-        "id": "wolfram",
-        "title": "Compute in Wolfram Alpha",
-        "type": "normal",
-        "contexts": ["selection"],
-    });
-}
-
-createContextMenu();
+// function createContextMenu() {
+//     chrome.contextMenus.create({
+//         "id": "wolfram",
+//         "title": "Compute in Wolfram Alpha",
+//         "type": "normal",
+//         "contexts": ["selection"],
+//     });
+// }
+//
+// createContextMenu();
 /**
  *
  * @type {string}
@@ -216,59 +216,59 @@ downloadUrl()
 /**
  *
  */
-function getResultListener() {
-    chrome.contextMenus.onClicked.addListener(
-        async function (info, tab) {
-            const response = await getWolframFullResult(info.selectionText)
-            const status = response.clone().status
-            const result = await response.clone().json()
-            const text = await response.clone().text()
-
-            /*console.log*/(result.queryresult)
-            if (result.queryresult.success === "false") {
-                if (result.queryresult.didyoumean) {
-                    await chrome.tabs.sendMessage(tab.id, {"didyoumean": result.queryresult.didyoumean})
-                    chrome.notifications.create({
-                        type: 'basic',
-                        iconUrl: 'icons/icons8-wolfram-alpha-50.png',
-                        title: 'Wolfram Alpha',
-                        message: 'Did you mean ' + result.queryresult.didyoumean + '?'
-                    })
-                } else if (result.queryresult.error.msg) {
-                    chrome.notifications.create(
-                        {
-                            message: result.queryresult.error.msg,
-                            type: "basic",
-                            iconUrl: "icons/icons8-wolfram-alpha-50.png",
-                            title: "Wolfram Alpha Error",
-                        })
-                } else {
-                    chrome.notifications.create(
-                        {
-                            message: "Unknown error, most is because you give a query that don't have any meaning",
-                            type: "basic",
-                            iconUrl: "icons/icons8-wolfram-alpha-50.png",
-                            title: "Wolfram Alpha Error",
-                        })
-                }
-                return
-            }
-            if (status !== 200) {
-                chrome.notifications.create(
-                    {
-                        message: "The response status is " + status + ",maybe we have problem with server",
-                        type: "basic",
-                        iconUrl: "icons/icons8-wolfram-alpha-50.png",
-
-                    }
-                )
-                return
-            }
-            await chrome.tabs.sendMessage(tab.id,
-                {"result": text});
-        }
-    )
-}
+// function getResultListener() {
+//     chrome.contextMenus.onClicked.addListener(
+//         async function (info, tab) {
+//             const response = await getWolframFullResult(info.selectionText)
+//             const status = response.clone().status
+//             const result = await response.clone().json()
+//             const text = await response.clone().text()
+//
+//             /*console.log*/(result.queryresult)
+//             if (result.queryresult.success === "false") {
+//                 if (result.queryresult.didyoumean) {
+//                     await chrome.tabs.sendMessage(tab.id, {"didyoumean": result.queryresult.didyoumean})
+//                     chrome.notifications.create({
+//                         type: 'basic',
+//                         iconUrl: 'icons/icons8-wolfram-alpha-50.png',
+//                         title: 'Wolfram Alpha',
+//                         message: 'Did you mean ' + result.queryresult.didyoumean + '?'
+//                     })
+//                 } else if (result.queryresult.error.msg) {
+//                     chrome.notifications.create(
+//                         {
+//                             message: result.queryresult.error.msg,
+//                             type: "basic",
+//                             iconUrl: "icons/icons8-wolfram-alpha-50.png",
+//                             title: "Wolfram Alpha Error",
+//                         })
+//                 } else {
+//                     chrome.notifications.create(
+//                         {
+//                             message: "Unknown error, most is because you give a query that don't have any meaning",
+//                             type: "basic",
+//                             iconUrl: "icons/icons8-wolfram-alpha-50.png",
+//                             title: "Wolfram Alpha Error",
+//                         })
+//                 }
+//                 return
+//             }
+//             if (status !== 200) {
+//                 chrome.notifications.create(
+//                     {
+//                         message: "The response status is " + status + ",maybe we have problem with server",
+//                         type: "basic",
+//                         iconUrl: "icons/icons8-wolfram-alpha-50.png",
+//
+//                     }
+//                 )
+//                 return
+//             }
+//             await chrome.tabs.sendMessage(tab.id,
+//                 {"result": text});
+//         }
+//     )
+// }
 
 // getResultListener();
 //
@@ -282,25 +282,25 @@ let oldSearch = ""
 /**
  * @function
  */
-function googleResultListener() {
-    chrome.tabs.onUpdated.addListener(async function (tabId, changeInfo, tab) {
-        if (tab.url.includes("google.com/search")) {
-            const url = new URL(tab.url)
-            const query = url.searchParams.get("q")
-            if (query === oldSearch) return
-            // Fix the problem  event execute multiple time
-            oldSearch = query
-            const result = await getWolframFullResult(url.searchParams.get("q"))
-            const resultText = await result.clone().text()
-            /*console.log*/("We got result from wolfram alpha")
-            await chrome.tabs.sendMessage(tabId, {"google": resultText});
-        }
-    })
-}
-googleResultListener();
+// function googleResultListener() {
+//     chrome.tabs.onUpdated.addListener(async function (tabId, changeInfo, tab) {
+//         if (tab.url.includes("google.com/search")) {
+//             const url = new URL(tab.url)
+//             const query = url.searchParams.get("q")
+//             if (query === oldSearch) return
+//             // Fix the problem  event execute multiple time
+//             oldSearch = query
+//             const result = await getWolframFullResult(url.searchParams.get("q"))
+//             const resultText = await result.clone().text()
+//             /*console.log*/("We got result from wolfram alpha")
+//             await chrome.tabs.sendMessage(tabId, {"google": resultText});
+//         }
+//     })
+// }
+// googleResultListener();
 
 // Make googleResultListener() also work after reload tab
-chrome.webNavigation.onCommitted.addListener((details) => {
+/*chrome.webNavigation.onCommitted.addListener((details) => {
     if (["reload", "link", "typed", "generated"].includes(details.transitionType) &amp;&amp;
         details.url.includes("google.com/search")) {
         // console.log("We got reload event")
@@ -315,13 +315,13 @@ chrome.webNavigation.onCommitted.addListener((details) => {
             oldSearch = query
             const result = await getWolframFullResult(url.searchParams.get("q"))
             const resultText = await result.clone().text()
-            /*console.log*/("We got result from wolfram alpha")
+            /!*console.log*!/("We got result from wolfram alpha")
             await chrome.tabs.sendMessage(details.tabId, {"google": resultText});
 
             chrome.webNavigation.onCompleted.removeListener(onComplete);
         });
     }
-});
+})*/;
 
 
 
