--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
     <section>
         <article class="readme"><p><a href="https://github.com/nhannht/wisdoom/actions/workflows/github_pages.yml"><img src="https://github.com/nhannht/wisdoom/actions/workflows/github_pages.yml/badge.svg" alt="Github Pages"></a>
 <a href="https://github.com/nhannht/wisdoom/actions/workflows/release.yml"><img src="https://github.com/nhannht/wisdoom/actions/workflows/release.yml/badge.svg" alt="Create release"></a>
-<a href="https://github.com/nhannht/wisdoom/actions/workflows/release-beta.yml"><img src="https://github.com/nhannht/wisdoom/actions/workflows/release-beta.yml/badge.svg" alt="Create beta release"></a></p>
+<a href="https://github.com/nhannht/wisdoom/actions/workflows/release-beta.yml"><img src="https://github.com/nhannht/wisdoom/actions/workflows/release-beta.yml/badge.svg" alt="Create beta release"></a>
+<a href="https://zenhub.com"><img src="https://dxssrr2j0sq4w.cloudfront.net/3.2.0/img/external/zenhub-badge.png" alt="ZenHub logo"></a></p>
 <p>Descendant of Wolfram Panda</p>
 <video controls>
 <source src="https://user-images.githubusercontent.com/69144096/211085462-81b60003-da61-4f71-a1d4-821f93afb858.mp4" 
