--- a/Components_KnowledgeDashBoard_DraggableButton.js.html
+++ b/Components_KnowledgeDashBoard_DraggableButton.js.html
@@ -56,6 +56,7 @@ import {ThemeProvider} from '@jetbrains/ring-ui/dist/global/theme'
 import Theme from "@jetbrains/ring-ui/dist/global/theme";
 import LoaderInline from '@jetbrains/ring-ui/dist/loader-inline/loader-inline';
 import {ReactComponent as WisdoomIcon} from '../../icons/wisdoomIcon.svg';
+import {useState} from "react";
 /**
  * @desc DraggableButton is a React component that renders a draggable button with an icon, tooltip and loader.
  * @class DraggableButton
@@ -73,10 +74,7 @@ export default function DraggableButton(props) {
                      bottom: "20%", right: "20%"
                 }}
             >
-                &lt;ThemeProvider theme={Theme.DARK}>
-                    &lt;Button
-
-
+                &lt;Button
                     data-tip={"Knowledge DashBoard"}
                     data-for={"KnowledgeDashBoard-tooltip"}
                     style={{
@@ -95,7 +93,6 @@ export default function DraggableButton(props) {
 
                         margin={2}/>
                 &lt;/Button>
-                &lt;/ThemeProvider>
                 &lt;ReactTooltip id={"KnowledgeDashBoard-tooltip"} type={"dark"}
                     place={"top"} effect={"solid"}/>
                 &lt;/div>
