--- a/index.html
+++ b/index.html
@@ -70,14 +70,18 @@ type=video/mp4>
 bigger system.</p>
 <h3>Showcases</h3>
 <h5>Curiosity about anything, just ask Wisdoom</h5>
-<p><img src="public/showcases/pic1.png" alt="pic1"></p>
+<p><img src="showcases/pic1.png" alt="pic1"></p>
 <h5>Wisdoom is very knowledgeable, they will answer you even it is wrong answers</h5>
-<p><img src="public/showcases/pic2.png" alt="pic2">
-<img src="public/showcases/pic3.png" alt="pic3"></p>
+<p><img src="showcases/pic2.png" alt="pic2">
+<img src="showcases/pic3.png" alt="pic3"></p>
 <h5>Change any assumption to get different answers</h5>
-<p><img src="public/showcases/pic4.png" alt="pic4"></p>
+<p><img src="showcases/pic4.png" alt="pic4"></p>
 <h5>Flexible settings to enrich your experience</h5>
-<p><img src="public/showcases/pic5.png" alt="pic5"></p></article>
+<p><img src="showcases/pic5.png" alt="pic5"></p>
+<h5>Quick answer when typing if available</h5>
+<p><img src="showcases/pic6.png" alt="pic6"></p>
+<h5>Suggest most relevant entities (require TextRazor api key)</h5>
+<p><img src="showcases/pic7.png" alt="pic7"></p></article>
     </section>
 
 
